--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sanjay's Resume</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcomee to my git page</h1>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Achievements</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    
+    <div class="content">
+        <h1>Sanjay</h1>
+        <p>Studies B.Sc in Computer Science</p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
